# playgroup_202602_docextract

./: .envrc  .gitignore  .pre-commit-config.yaml  PREPARATION_NOTES.md  QUICKSTART.md  README.md  extraction_and_prompt_example.py  justfile  pyproject.toml
data/: pdf_names.txt  playgroup_dev_expected.tsv  playgroup_dev_expected_corrected.tsv  playgroup_dev_in.tsv
src/: cli.py  const.py
src/commands/: compare.py  extract.py  pipeline.py  score.py
src/lib/: llm_openrouter.py  pdf_extract.py  utils.py
src/lib/utils/: __init__.py  normalise.py  table.py
tests/: conftest.py  test_cli.py  test_llm_openrouter.py
tests/test_commands/: test_compare.py  test_extract.py  test_pipeline.py  test_score.py
tests/test_lib/: test_llm_openrouter.py  test_utils.py
tests/test_lib/test_utils/: test_normalise.py
utility/: extract_copy_kleister_charity.sh
